--- a/package.json
+++ b/package.json
@@ -27,5 +27,6 @@
     "gulp-wrap": "^0.11.0",
     "lodash": "^3.8.0",
     "run-sequence": "^1.1.0"
-  }
+  },
+  "types": "./angular-download.d.ts"
 }
